--- a/students1/package.json
+++ b/students1/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
@@ -16,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
+    "sqlite3": "^5.1.7",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
